feat: add Service Status project card (links to Pages)

--- a/index.html
+++ b/index.html
@@ -158,6 +158,26 @@
               </div>
             </article>
 
+            <!-- Service Status (external) -->
+            <article class="project-card">
+              <div class="project-media"><div class="thumb" aria-hidden="true"></div></div>
+              <div class="project-body">
+                <div class="logos">
+                  <img src="assets/projects/apt-banner.svg" alt="Status" loading="lazy" onerror="this.onerror=null;this.src='assets/projects/gaming-chair-banner.svg'" />
+                </div>
+                <h3>Service Status</h3>
+                <p>Live uptime checks for key services (auto-updated).</p>
+                <div class="badges">
+                  <span>Web</span><span>Automation</span>
+                </div>
+                <div class="links">
+                  <a href="https://vntakeshi29.github.io/service-status/" target="_blank" rel="noopener">View status</a>
+                </div>
+              </div>
+            </article>
+
+            
+
             <!-- NRO -->
             <article class="project-card">
               <div class="project-media"><div class="thumb" aria-hidden="true"></div></div>
