feat(status): show live summary from service-status

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                   <img src="assets/projects/apt-banner.svg" alt="Status" loading="lazy" onerror="this.onerror=null;this.src='assets/projects/gaming-chair-banner.svg'" />
                 </div>
                 <h3>Service Status</h3>
-                <p>Live uptime checks for key services (auto-updated).</p>
+                <p id="statusSummary">Live uptime checks for key services. Loading…</p>
                 <div class="badges">
-                  <span>Web</span><span>Automation</span>
+                  <span id="statusBadge">Checking</span><span>Web</span><span>Automation</span>
                 </div>
                 <div class="links">
                   <a href="https://vntakeshi29.github.io/service-status/" target="_blank" rel="noopener">View status</a>
